--- a/anime_page/index.html
+++ b/anime_page/index.html
@@ -16,6 +16,7 @@
         <!--grid de produtos -->
         <main class="container">
             <section class="products-container">
+                <div>
                 <div class="card">
                     <div class="product-image" id="img-1"></div>
                     <h3>Anime 1</h3>
@@ -50,12 +51,6 @@
                     <p>Este anime é muito bom</p>
                     <a href="#" class="btn">Ver</a>
                 </div>
-                <section class="products-container">
-                <div class="card">
-                    <div class="product-image" id="img-6"></div>
-                    <h3>Anime 1</h3>
-                    <p>Este anime é muito bom</p>
-                    <a href="#" class="btn">Ver</a>
                 </div>
             </section> 
         </main>
