--- a/anime_page/index.html
+++ b/anime_page/index.html
@@ -15,43 +15,45 @@
 
         <!--grid de produtos -->
         <main class="container">
-            <section class="products-container">
-                <div>
+            <section class="products-container"></section>
+               
                 <div class="card">
                     <div class="product-image" id="img-1"></div>
                     <h3>Anime 1</h3>
                     <p>Este anime é muito bom</p>
                     <a href="#" class="btn">Ver</a>
-                </div>
-                <section class="products-container">
-                <div class="card">
+                </div>                    
+                    <div class="card">
                     <div class="product-image" id="img-2"></div>
                     <h3>Anime 2</h3>
                     <p>Este anime é muito bom</p>
                     <a href="#" class="btn">Ver</a>
-                 </div>
-                 <section class="products-container">
+                </div>                
                 <div class="card">
                     <div class="product-image" id="img-3"></div>
                     <h3>Anime 3</h3>
                     <p>Este anime é muito bom</p>
                     <a href="#" class="btn">Ver</a>
-                </div>
-                <section class="products-container">
+                </div>                
                 <div class="card">
                     <div class="product-image" id="img-4"></div>
                     <h3>Anime 4</h3>
                     <p>Este anime é muito bom</p>
                     <a href="#" class="btn">Ver</a>
-                </div>
-                <section class="products-container">
+                </div>                
                 <div class="card">
                     <div class="product-image" id="img-5"></div>
                     <h3>Anime 1</h3>
                     <p>Este anime é muito bom</p>
                     <a href="#" class="btn">Ver</a>
+                </div>                
+                <div class="card">
+                    <div class="product-image" id="img-6"></div>
+                    <h3>Anime 1</h3>
+                    <p>Este anime é muito bom</p>
+                    <a href="#" class="btn">Ver</a>
                 </div>
-                </div>
+                
             </section> 
         </main>
         <!-- rodapé -->
