--- a/convite_clash/index.html
+++ b/convite_clash/index.html
@@ -28,7 +28,7 @@
                 <p class="lukoko">Jungle</p>
             </div>
             <div id="member-card3">
-                <p class="mid">Mito Mathos</p>
+                <p class="mid">Mathos</p>
                 <p class="mito">Mid</p>
             </div>
             <div id="member-card4">
